[gd_scene load_steps=23 format=3 uid="uid://c3rliq2t0hlhh"]

[ext_resource type="Texture2D" uid="uid://c6qt2cab2o7tb" path="res://Assets/Enemies/Blockoid.png" id="1_7kplx"]
[ext_resource type="Script" uid="uid://dmlukd2lokixy" path="res://Characters/Blockoid/blockoid.gd" id="1_qkr8c"]
[ext_resource type="Shader" uid="uid://cewkp82msxu6d" path="res://Characters/stun_shader.gdshader" id="2_oja2b"]
[ext_resource type="Script" uid="uid://d3i3msmp2ahp2" path="res://Characters/Blockoid/state_machine.gd" id="4_oja2b"]
[ext_resource type="Script" uid="uid://dhfuwtce18xre" path="res://Characters/Blockoid/idle_state.gd" id="5_oja2b"]
[ext_resource type="Script" uid="uid://s0fd3afjkpyj" path="res://Characters/Blockoid/stun_state.gd" id="6_7kplx"]
[ext_resource type="Script" uid="uid://j7n6i2wj8jgc" path="res://Characters/Blockoid/roam_state.gd" id="6_qkr8c"]
[ext_resource type="Script" uid="uid://1oglegba536u" path="res://Characters/Blockoid/attack_state.gd" id="7_oja2b"]
[ext_resource type="AudioStream" uid="uid://tbhh05dujyno" path="res://Assets/SFX/DashThrough.wav" id="7_pyb11"]
[ext_resource type="Script" uid="uid://cytxxqwusx4el" path="res://Characters/Blockoid/grabbed_state.gd" id="8_7kplx"]
[ext_resource type="PackedScene" uid="uid://b2khkekf4tyr0" path="res://Characters/Blockoid/laser_beam.tscn" id="8_62y5k"]
[ext_resource type="AudioStream" uid="uid://ck8jk06hdsw3" path="res://Assets/SFX/Grab.wav" id="9_e5svg"]
[ext_resource type="Script" uid="uid://c0jqhhotwkcbx" path="res://Characters/Blockoid/thrown_state.gd" id="10_qkr8c"]
[ext_resource type="Script" uid="uid://deh6g4brfihwi" path="res://Characters/Blockoid/death_state.gd" id="11_7kplx"]
[ext_resource type="AudioStream" uid="uid://cbujn8tctmke7" path="res://Assets/SFX/EnemyDeath.wav" id="12_ntgt5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_62y5k"]
resource_local_to_scene = true
shader = ExtResource("2_oja2b")
shader_parameter/flash_color = Vector3(1, 1, 0.2)
shader_parameter/flash_strength = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_te6s6"]
atlas = ExtResource("1_7kplx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tlmiu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te6s6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68hu0"]
size = Vector2(30, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kplx"]
size = Vector2(36, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oja2b"]
size = Vector2(1, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62y5k"]
size = Vector2(1, 19)

[node name="Blockoid" type="CharacterBody2D" node_paths=PackedStringArray("stun_state", "death_state")]
scale = Vector2(2, 2)
collision_layer = 4
script = ExtResource("1_qkr8c")
shape_type = 2
stun_state = NodePath("StateMachine/StunState")
death_state = NodePath("StateMachine/DeathState")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
material = SubResource("ShaderMaterial_62y5k")
sprite_frames = SubResource("SpriteFrames_tlmiu")

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_68hu0")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("RectangleShape2D_7kplx")

[node name="DashingArea1" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashingArea1"]
position = Vector2(15.5, 0.5)
shape = SubResource("RectangleShape2D_oja2b")

[node name="TimeoutTimerArea1" type="Timer" parent="DashingArea1"]
wait_time = 0.5
one_shot = true

[node name="DashingArea2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashingArea2"]
position = Vector2(-15.5, 0.5)
shape = SubResource("RectangleShape2D_62y5k")

[node name="TimeoutTimerArea2" type="Timer" parent="DashingArea2"]
wait_time = 0.5
one_shot = true

[node name="LaserBeam" parent="." instance=ExtResource("8_62y5k")]
scale = Vector2(0.5, 0.5)
target_position = Vector2(1000, 0)
collision_mask = 7

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "initial_state")]
script = ExtResource("4_oja2b")
character = NodePath("..")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("roam_state")]
script = ExtResource("5_oja2b")
roam_state = NodePath("../RoamState")

[node name="IdleTimer" type="Timer" parent="StateMachine/IdleState"]
wait_time = 2.0
one_shot = true

[node name="RoamState" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_state")]
script = ExtResource("6_qkr8c")
attack_state = NodePath("../AttackState")

[node name="TransitionTimer" type="Timer" parent="StateMachine/RoamState"]
one_shot = true

[node name="AttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("7_oja2b")
idle_state = NodePath("../IdleState")

[node name="LaserShutdownTimer" type="Timer" parent="StateMachine/AttackState"]
wait_time = 1.5
one_shot = true

[node name="StunState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "grabbed_state")]
script = ExtResource("6_7kplx")
idle_state = NodePath("../IdleState")
grabbed_state = NodePath("../GrabbedState")

[node name="StunnedSFX" type="AudioStreamPlayer2D" parent="StateMachine/StunState"]
position = Vector2(280, 135)
scale = Vector2(2, 2)
stream = ExtResource("7_pyb11")

[node name="StunTimer" type="Timer" parent="StateMachine/StunState"]
wait_time = 3.0
one_shot = true

[node name="StunShaderTimer" type="Timer" parent="StateMachine/StunState"]
wait_time = 0.2

[node name="GrabbedState" type="Node" parent="StateMachine" node_paths=PackedStringArray("thrown_state")]
script = ExtResource("8_7kplx")
thrown_state = NodePath("../ThrownState")

[node name="GrabbedSFX" type="AudioStreamPlayer2D" parent="StateMachine/GrabbedState"]
position = Vector2(280, 135)
scale = Vector2(2, 2)
stream = ExtResource("9_e5svg")

[node name="ThrownState" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("10_qkr8c")
idle_state = NodePath("../IdleState")

[node name="TransitionTimer" type="Timer" parent="StateMachine/ThrownState"]
wait_time = 0.3
one_shot = true

[node name="DeathState" type="Node" parent="StateMachine"]
script = ExtResource("11_7kplx")

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="StateMachine/DeathState"]
position = Vector2(280, 135)
scale = Vector2(2, 2)
stream = ExtResource("12_ntgt5")
volume_db = -3.0

[node name="StateLabel" type="Label" parent="."]
texture_filter = 3
offset_left = -22.0
offset_top = -31.0
offset_right = 22.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 15
text = "Idle"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="EnemyDetector" to="StateMachine/ThrownState" method="_on_enemy_detector_body_entered"]
[connection signal="area_entered" from="DashingArea1" to="." method="_on_dashing_area_1_area_entered"]
[connection signal="timeout" from="DashingArea1/TimeoutTimerArea1" to="." method="_on_timeout_timer_area_1_timeout"]
[connection signal="area_entered" from="DashingArea2" to="." method="_on_dashing_area_2_area_entered"]
[connection signal="timeout" from="DashingArea2/TimeoutTimerArea2" to="." method="_on_timeout_timer_area_2_timeout"]
[connection signal="timeout" from="StateMachine/IdleState/IdleTimer" to="StateMachine/IdleState" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/RoamState/TransitionTimer" to="StateMachine/RoamState" method="_on_transition_timer_timeout"]
[connection signal="timeout" from="StateMachine/AttackState/LaserShutdownTimer" to="StateMachine/AttackState" method="_on_laser_shutdown_timer_timeout"]
[connection signal="timeout" from="StateMachine/StunState/StunTimer" to="StateMachine/StunState" method="_on_stun_timer_timeout"]
[connection signal="timeout" from="StateMachine/StunState/StunShaderTimer" to="StateMachine/StunState" method="_on_stun_shader_timer_timeout"]
[connection signal="timeout" from="StateMachine/ThrownState/TransitionTimer" to="StateMachine/ThrownState" method="_on_transition_timer_timeout"]
